Wed Feb 28 17:44:20 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Truncate.h (Truncator):

          Fixed typo in the ACE_LACKS_UNSIGNEDLONGLONG_T case.
          s/ACE_UIN32/ACE_UINT32/.

Wed Feb 28 13:32:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-hpux-11.00.h:
          Moved ACE_HAS_SSIZE_T outside of the compiler specific part, gcc
          and aCC do have ssize_t. Also moved ACE_HAS_XPG4_MULTIBYTE_CHAR
          outside of the compiler part.

Wed Feb 28 11:09:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.cpp (num_processors):
          Implemented for HPUX

Wed Feb 28 09:58:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ADDIDL.DSM:
          Moved to TAO

        * bin/msvc_cidlc.pl:
          Moved to CIAO

        * indent_macros.perl:
        * indent_macros.pl:
          Renamed extension to .pl

Wed Feb 28 09:44:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/corba-boolean.perl:
        * bin/rm_exception_macros.pl:
        * bin/subst_env.pl:
        * bin/tao_env.pl:
        * bin/tao_svcconf.pl:
          Moved to TAO/bin, no need to ship these with ACE

Wed Feb 28 08:14:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/DLL_Manager.cpp:
          Fixed a deadlock that could occur when a dll is loaded which itselfs
          also loads a dll in its static initialisation. This fixes bugzilla bug
          2830.

Tue Feb 27 21:18:07 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * netsvcs/lib/Time_Request_Reply.cpp:
        * tests/Integer_Truncate_Test.cpp:
        * tests/CDR_File_Test.cpp:

          s/ACE_Utils::Truncate/ACE_Utils::truncate_cast/g.  The former is
          deprecated.

        * tests/High_Res_Timer_Test.cpp:

          Improved variable types to make use of
          ACE_Utils::truncate_cast<> unnecessary.
