@@ -731,8 +731,13 @@ ACE_DLL_Manager::unload_dll (ACE_DLL_Handle *dll_handle, int force_unload)
 
               void * const unload_policy_ptr =
                 dll_handle->symbol (ACE_LIB_TEXT ("_get_dll_unload_policy"), 1);
+#if defined (ACE_OPENVMS) && (!defined (__INITIAL_POINTER_SIZE) || (__INITIAL_POINTER_SIZE < 64))
+              int const temp_p =
+                reinterpret_cast<int> (unload_policy_ptr);
+#else
               intptr_t const temp_p =
                 reinterpret_cast<intptr_t> (unload_policy_ptr);
+#endif
 
               dll_unload_policy const the_policy =
                 reinterpret_cast<dll_unload_policy> (temp_p);
